--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,15 @@
 @import url('https://db.onlinewebfonts.com/c/4cd7c95ebd9e972224a5473c6172b30a?family=Futura+Bold+Italic');
 @import url('https://fonts.cdnfonts.com/css/hind');
 
+@font-face {
+    font-family: "Futura Bold Italic";
+    /*Can be any text*/
+    src: local("FuturaBoleItalic"),
+        url("./assets/fonts/futura_bold_italic-webfont.ttf") format("truetype"),
+        url("./assets/fonts/futura_bold_italic-webfont.woff") format("woff"),
+        url("./assets/fonts/futura_bold_italic-webfont.woff2") format("woff");
+}
+
 :root {}
 
 @layer base {
